bk_ida/gccida/c0/subst_stack_regs_pat
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:1943:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat_src = ( rtx)pata[1]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:1959:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = ( int)pat_src[1]; 
            ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:1987:65: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( ( unsigned __int16)*( _DWORD *)pat_src != 42 || pat_src[1] != 9 ) 
                                                     ~~~~~~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:2036:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)*dest)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:2037:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)*dest)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:2283:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( pata == ( rtx)insna[2] ) 
                   ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:2292:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)*dest)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/reg-stack.c:2293:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)*dest)] == MODE_COMPLEX_FLOAT) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subst_stack_regs_pat/src/obj/reg-stack.o] Error 1
